--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MUJI 服裝尺寸推薦</title>
+  <title>服裝尺寸推薦</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body { font-family: sans-serif; max-width: 420px; margin: 2em auto; }
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>MUJI 服裝尺寸推薦</h1>
+  <h1>服裝尺寸推薦</h1>
   <form id="size-form">
     <select id="gender" required>
       <option value="" disabled selected>請選擇性別</option>
