--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="number" id="height" placeholder="身高 (cm)" required />
     <input type="number" id="weight" placeholder="體重 (kg)" required />
     <input type="number" id="bust" placeholder="胸圍 (cm) - 選填" />
-    <input type="number" id="waist" placeholder="腰圍 (cm) - 女裝下身必填" />
+    <input type="number" id="waist" placeholder="腰圍 (cm) - 下身必填" />
     <input type="number" id="hip" placeholder="臀圍 (cm) - 女裝下身選填" />
     <input type="url" id="url" placeholder="服裝連結" required />
     <button type="submit">送出</button>
